# solarseed-tou-metering

./: .gitignore  DESIGN-HACS-PLUGIN.md  README.md  hacs.json  pyproject.toml
custom_components/solarseed_tou/: __init__.py  config_flow.py  const.py  holiday.py  manifest.json  schedule.py  sensor.py  storage.py  strings.json
custom_components/solarseed_tou/frontend/: card.js  panel.js  styles.js
custom_components/solarseed_tou/translations/: en.json
docs/: ALGORITHM_REVS.md  DEPLOY-PORTLAND.md  FEEDBACK_REVS.md  YAML-CONTRACT.md  tou-plugin-v5.jsx
tests/: QA-PLAN.md  conftest.py  test_holiday.py  test_schedule.py  test_storage.py
