[project]
name = "solarseed-tou-metering"
version = "0.7.0"
description = "Solarseed TOU Energy Metering — Home Assistant custom integration"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
